<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/nameLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="202dp"
                android:layout_height="173dp"
                android:contentDescription="@string/avatar_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/alterarFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginLeft="72dp"
                android:onClick="editarAvatarButton"
                android:text="@string/AlterAvatarButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.496" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Seu nome" />

        <EditText
            android:id="@+id/campoNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:checkedButton="@id/radioButton"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SexOpt1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SexOpt2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SexOpt3" />
        </RadioGroup>

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email" />

        <EditText
            android:id="@+id/campoEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/senhaLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password" />

        <EditText
            android:id="@+id/campoSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/telefoneLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Telefone" />

        <EditText
            android:id="@+id/telefoneCampo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:id="@+id/disciplinaLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Disciplina" />

        <EditText
            android:id="@+id/disciplinaCampo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/turmaLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Turma" />

        <EditText
            android:id="@+id/turmaCampo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/botaoEnviar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="cadastrarButton"
            android:text="@string/cadastrarButton"
            tools:text="@string/cadastrarButton" />

    </LinearLayout>
</ScrollView>